--- a/ksql-workshop.adoc
+++ b/ksql-workshop.adoc
@@ -20,13 +20,9 @@ ____
 
 image::images/ksql_workshop_01.png[Diagram of what's being built with the KSQL demo]
 
-You can find all of the KSQL commands used during this workshop in the `ksql-workshop.sql` file.
-
-The slides that go with it https://speakerdeck.com/rmoff/javazone-workshop-apache-kafka-and-ksql-in-action-lets-build-a-streaming-data-pipeline[can be found here].
+The slides that go with it https://slides.for.the.pue.workshop.com[can be found here].
 
 Don't forget to check out the #ksql channel on our https://slackpass.io/confluentcommunity[Community Slack group]
-
-——_Robin Moffatt https://twitter.com/rmoff/[@rmoff]_
 
 == Prerequisites
 
@@ -42,7 +38,7 @@ Change the working directory:
 
 [source,bash]
 ----
-cd examples/ksql-workshop
+cd ksql-workshop
 ----
 
 Start Confluent Platform: 
